pkg/lang/testdata/ub/inputs/valid/default-comprehension.ub
inputs: {
  nums: { type: list(integer), default: [for x in [1, 2]: x] }
}
