pkg/lang/testdata/ub/inputs/invalid/enum-non-literal.ub
inputs: {
  proto: { type: string, enum: [['a']] }
}
